[package]
name = "mc_status"
version = "0.1.0"
edition = "2021"
default-run = "mc_status"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
confy = "0.6.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
futures = "0.3"
tokio = { version = "1.39.3", features = ["full"] }
dialoguer = "0.11.0"
